Now one gets an error if one tries to insert an invalid value via a stored procedure in STRICT mode. (Bug #5907)